test scripts into utils/, and in playing around with them, I found and
fixed an X server resource leak.  Use Etpalette to view the 256-color
palette.
----------------------------------------------------------------------
Mon Apr 18 21:49:08 2005                        Michael Jennings (mej)

Re-indent code.
----------------------------------------------------------------------
Mon Apr 18 22:11:22 2005                        Michael Jennings (mej)

Patch from C. David Wilde <cdw@mylinuxguy.com> to correct the non-MMX
color modifier routines.
----------------------------------------------------------------------
Wed Apr 20 19:07:38 2005                    Michael Frysinger (vapier)

Patch from Tres Melton <tres@mindspring.com> to fix window manager
hints on 64bit systems.  http://bugs.gentoo.org/show_bug.cgi?id=76324
----------------------------------------------------------------------
Mon Apr 25 15:34:49 2005                        Michael Jennings (mej)

Added --enable-escreen-fx flag to ./configure to enable/disable the
Escreen startup effects (bosconian, matrix, etc.).

Fixed some warnings.
----------------------------------------------------------------------
Tue Apr 26 11:45:39 2005                        Michael Jennings (mej)

Fixed incorrect WORDS_BIGENDIAN logic caught by Tres Melton
<tres@mindspring.com>.
----------------------------------------------------------------------
Tue Apr 26 12:10:16 2005                        Michael Jennings (mej)

Reverted patch from C. David Wilde <cdw@mylinuxguy.com> which broke
big-endian machines and really didn't fix anything at all.  Thanks to
Tres Melton <tres@mindspring.com> for catching this.
----------------------------------------------------------------------
Tue Apr 26 13:40:54 2005                        Michael Jennings (mej)

Patch from Tres Melton <tres@mindspring.com> to optimize 24-bit and
32-bit non-MMX shading routines.
----------------------------------------------------------------------